--- a/package.json
+++ b/package.json
@@ -19,5 +19,11 @@
     "@types/react": "^16.8.13",
     "@types/react-dom": "^16.8.3",
     "typescript": "^3.4.2"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
